# whyDPI

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  SECURITY.md  install.sh  pyproject.toml  requirements.txt  setup.py  whydpi.service
.cursor/rules/: git-authorship.mdc
.githooks/: README  commit-msg
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_NOTES_TEMPLATE.md  REPOSITORY_METADATA.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  refresh-release-notes.yml  release.yml
bucket/: whydpi.json
packaging/aur/whydpi/: .SRCINFO  PKGBUILD  README.md
packaging/aur/whydpi-git/: .SRCINFO  PKGBUILD  README.md
packaging/debian/: README.md  build-deb.sh  changelog  control  copyright  rules
packaging/desktop/: whydpi-tray.desktop
packaging/fedora/: README.md  build-rpm.sh  whydpi.spec
packaging/windows/: README.md  build.ps1  cli_entry.py  tray_entry.py  whydpi.iss
scripts/: reject-cursor-coauthor.sh
tests/: test_cache.py  test_consent.py  test_discovery.py  test_dns_resolver.py  test_failure.py  test_resolve.py  test_strategy.py  test_tls_parser.py
whydpi/: __init__.py  __main__.py  cli.py  config.py  dns_config.py  nfqueue_handler.py  packet_injector.py  settings.py
whydpi/core/: cache.py  discovery.py  engine.py  failure.py  resolve.py  strategy.py
whydpi/net/: __init__.py  dns.py  dns_cache.py  proxy.py  tls_parser.py
whydpi/system/: _trace.py  dns_redirect_windows.py  dns_windows.py  netfilter.py  resolver.py  windivert.py
whydpi/ui/: __init__.py  autostart.py  consent.py  status_window.py  tray.py
