[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whydpi"
version = "0.2.0"
description = "Educational DPI bypass tool — adaptive per-SNI TLS fragmentation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "whyDPI Contributors" },
]
keywords = ["dpi", "tls", "fragmentation", "networking", "research", "education"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Education",
    "Topic :: Security",
    "Topic :: System :: Networking",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    'tomli; python_version < "3.11"',
]

[project.urls]
Homepage = "https://github.com/byrdltd/whyDPI"
Issues = "https://github.com/byrdltd/whyDPI/issues"
Source = "https://github.com/byrdltd/whyDPI"

[project.scripts]
whydpi = "whydpi.cli:main"

[tool.setuptools.packages.find]
include = ["whydpi*"]
exclude = ["tests*", "packaging*"]
